add: jwt api
