# app/api/user.go
@@ -12,10 +12,13 @@ import (
 // 用户API管理对象
 var User = new(userApi)
 var UserAuth = new(userAuth)
+var UserAuthWeb = new(userAuthWeb)
 
 type userApi struct{}
 
 type userAuth struct{}
+
+type userAuthWeb struct{}
 
 // @summary 用户注册接口
 // @tags    用户服务
@@ -35,6 +38,30 @@ func (a *userApi) Register(r *ghttp.Request) {
 		response.JsonExit(r, 1, err.Error())
 	}
 	if err := service.User.Register(serviceReq); err != nil {
+		response.JsonExit(r, 1, err.Error())
+	} else {
+		response.JsonExit(r, 0, "ok")
+	}
+}
+
+// @summary 用户注册接口mail
+// @tags    用户服务
+// @produce json
+// @param   entity  body model.UserApiSignUpMailReq true "注册请求"
+// @router  /api/user/register-mail [POST]
+// @success 200 {object} response.JsonResponse "执行结果"
+func (a *userApi) RegisterMail(r *ghttp.Request) {
+	var (
+		apiReq     *model.UserApiSignUpMailReq
+		serviceReq *model.UserServiceSignUpMailReq
+	)
+	if err := r.ParseForm(&apiReq); err != nil {
+		response.JsonExit(r, 1, err.Error())
+	}
+	if err := gconv.Struct(apiReq, &serviceReq); err != nil {
+		response.JsonExit(r, 1, err.Error())
+	}
+	if err := service.User.RegisterMail(serviceReq); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	} else {
 		response.JsonExit(r, 0, "ok")
@@ -80,7 +107,7 @@ func (a *userApi) SignInWeb(r *ghttp.Request) {
 	if err := gconv.Struct(apiReq, &serviceReq); err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
-	user, err := service.User.SignInWeb(serviceReq)
+	user, err := service.User.SignInWeb(r.Context(), serviceReq)
 	if err != nil {
 		response.JsonExit(r, 1, err.Error())
 	}
@@ -104,6 +131,15 @@ func (a *userApi) SignInWeb(r *ghttp.Request) {
 // @success 200 {object} response.JsonResponse "执行结果:`true/false`"
 func (a *userApi) IsSignedIn(r *ghttp.Request) {
 	response.JsonExit(r, 0, "", service.User.IsSignedIn(r.Context()))
+}
+
+// @summary 判断用户是否已经登录
+// @tags    用户服务
+// @produce json
+// @router  /api/user/is-signed-in-web [GET]
+// @success 200 {object} response.JsonResponse "执行结果:`true/false`"
+func (a *userApi) IsSignedInWeb(r *ghttp.Request) {
+	response.JsonExit(r, 0, "", service.User.IsSignedInWeb(r.Header.Get("Token"), r.Header.Get("Id"), r.Header.Get("Salt")))
 }
 
 // @summary 用户注销/退出接口
@@ -163,4 +199,13 @@ func (a *userApi) CheckNickName(r *ghttp.Request) {
 // @success 200 {object} model.User "用户信息"
 func (a *userAuth) GetProfile(r *ghttp.Request) {
 	response.JsonExit(r, 0, "", service.User.GetProfile(r.Context()))
+}
+
+// @summary 获取用户详情信Context.Get(ctx)息
+// @tags    用户服务
+// @produce json
+// @router  /api/user/get-profile-web [GET]
+// @success 200 {object} model.User "用户信息"
+func (a *userAuthWeb) GetProfileWeb(r *ghttp.Request) {
+	response.JsonExit(r, 0, "", service.User.GetProfileWeb(r.Context()))
 }
