# app/model/internal/user_mail.go
@@ -1,0 +1,18 @@
+// ==========================================================================
+// This is auto-generated by gf cli tool. DO NOT EDIT THIS FILE MANUALLY.
+// ==========================================================================
+
+package internal
+
+import (
+	"github.com/gogf/gf/os/gtime"
+)
+
+// UserMail is the golang structure for table userMail.
+type UserMail struct {
+	Id       uint        `orm:"id,primary"   json:"id"`       //
+	Email    string      `orm:"email,unique" json:"email"`    //
+	Password string      `orm:"password"     json:"password"` //
+	CreateAt *gtime.Time `orm:"create_at"    json:"createAt"` //
+	UpdateAt *gtime.Time `orm:"update_at"    json:"updateAt"` //
+}
