# app/model/user.go
@@ -20,6 +20,13 @@ type UserApiSignUpReq struct {
 	Nickname  string
 }
 
+// 注册请求参数，用于前后端交互参数格式约定
+type UserApiSignUpMailReq struct {
+	Email     string `v:"required|email"`
+	Password  string `v:"required|length:6,16#请输入确认密码|密码长度应当在:min到:max之间"`
+	Password2 string `v:"required|length:6,16|same:Password#密码不能为空|密码长度应当在:min到:max之间|两次密码输入不相等"`
+}
+
 // 登录请求参数，用于前后端交互参数格式约定
 type UserApiSignInReq struct {
 	Passport string `v:"required#账号不能为空"`
@@ -47,6 +54,12 @@ type UserServiceSignUpReq struct {
 	Passport string
 	Password string
 	Nickname string
+}
+
+// 注册输入参数
+type UserServiceSignUpMailReq struct {
+	Email    string
+	Password string
 }
 
 type UserServiceSignInWebReq struct {
